# mogt_test

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  Makefile  README.md  common_makefile.mk  package-lock.json  package.json
.github/workflows/: assign-pr-author.yaml  check-pr.yaml
src/test_interview/: .env.example  Dockerfile  Dockerfile.tests  Makefile  README.md  config.yaml  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/test_interview/lib/api/v1/handlers/: __init__.py  errors.py  files.py
src/test_interview/lib/api/v1/handlers/health/: __init__.py  liveness_probe.py
src/test_interview/lib/api/v1/schemas/: __init__.py  files.py  health.py
src/test_interview/lib/app/: __init__.py  app.py  errors.py  settings.py
src/test_interview/lib/app/split_settings/: __init__.py  api.py  app.py  file.py  logger.py  proxy.py  utils.py
src/test_interview/lib/clients/: __init__.py  http.py
src/test_interview/lib/file/: services.py
src/test_interview/lib/models/: file.py
src/test_interview/tests/: conftest.py
src/test_interview/tests/core/: __init__.py  settings.py
src/test_interview/tests/core/split_settings/: __init__.py  api.py  project.py  utils.py
src/test_interview/tests/functional/models/: __init__.py  http.py
src/test_interview/tests/functional/src/: test_health.py
src/test_interview/tests/unit/src/: test_health.py
